apps/minecraft/deploy/local/releases/minecraft-ingress/traefik-custom-resources/templates/ingressroute.yaml
---
# Source: traefik-custom-resources/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: minecraft
  namespace: minecraft
  labels:
    helm.sh/chart: traefik-custom-resources-2.0.7
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/instance: minecraft-ingress
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
  - minecraft
  routes:
  - match: HostSNI(`*`)
    services:
    - name: velocity
      port: proxy
      proxyProtocol:
        version: 2
